--- a/src/index.scss
+++ b/src/index.scss
@@ -20,3 +20,14 @@ a {
   text-decoration: none;
   color: black;
 }
+
+.sign-up-container,
+.sign-in-container {
+  display: flex;
+  flex-direction: column;
+  width: 380px;
+
+  h2 {
+    margin: 10px 0;
+  }
+}
