adding cart context and shopping icon as well as cart dropdown

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@ body {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 204x 40px;
 }
 
 code {
