--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -11,7 +11,7 @@
   text-transform: uppercase;
   // font-family: 'Open Sans Condensed';
   font-weight: bolder;
-  border: none;
+  border: 1px solid transparent;
   cursor: pointer;
   display: flex;
   justify-content: center;
